--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,8 @@
 @import '~bootstrap/scss/bootstrap';
+
+@import './partials/variables';
+@import './partials/utilities';
+@import './partials/general';
+@import './partials/home';
+@import './partials/header';
+@import './partials/footer';
