--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -19,6 +19,14 @@ header {
           justify-content: flex-start;
           li {
             margin-right: 10px;
+            transition: all .3s;
+            &.current-page {
+                background-color: white;
+                box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
+                a {
+                    color: $header-clr ;
+                }
+            }
           }
         }
       }
