--- a/resources/scss/partials/_home.scss
+++ b/resources/scss/partials/_home.scss
@@ -2,8 +2,6 @@
 
 
 .card {
-    width: 465px;
-    min-width: 250px;
     margin: 10px 10px 40px;
     .card-top {
       position: relative;
@@ -32,7 +30,7 @@
         top: 10px;
         right: 0;
         z-index: 3;
-        &.active {
+        &:hover {
           color: $active-clr;
         }
       }
